--- a/app/views/spree/admin/shared/_head.html.erb
+++ b/app/views/spree/admin/shared/_head.html.erb
@@ -12,6 +12,8 @@
   <% end %>
 </title>
 
+<%= favicon_link_tag 'favicon.ico' %>
+
 <!-- Get "Open Sans" font from Google -->
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600&subset=latin,cyrillic,greek,vietnamese' rel='stylesheet' type='text/css'>
 
