--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -11,6 +11,7 @@
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
   <![endif]-->
+  <meta property="og:image" content="<%= image_path "leema-og-image.jpg" %>" />
 
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= stylesheet_link_tag "welcome", :media => "all" %>
