adding privacy policy, terms, guidelines, and faq pages

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -26,8 +26,8 @@
             </div>
             <div class="col-xs-6">
               <ul class="list-unstyled footer-links">
-                <li><a href="#">Guidelines</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="/guidelines">Guidelines</a></li>
+                <li><a href="/faq">FAQ</a></li>
                 <li><a href="http://blog.leema.co" target="_blank">Blog</a></li>
               </ul>
             </div>
@@ -86,8 +86,8 @@
         <div class="col-sm-6 legal">
           <ul class="list-inline footer-links">
             <li>&copy; Leema <%= Time.now.year %></li>
-            <li><a href="#">Terms of Service</a></li>
-            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="/terms-of-use">Terms of Service</a></li>
+            <li><a href="/privacy-policy">Privacy Policy</a></li>
           </ul>
         </div><!-- close .col-sm-6 -->
       </div><!-- close .row -->
