--- a/app/views/guidelines/index.html.erb
+++ b/app/views/guidelines/index.html.erb
@@ -1,3 +1,81 @@
 <div class="container">
 	<h1>Guidelines</h1>
+
+	<h3>Leema Seller Guidelines</h3>
+	<p>Leema gives you a store that you can call your own. However, we do require you play nice and abide by the Leema Seller Guidelines.</p>
+
+	<h3>Leema requires sellers to:</h3>
+	<ul>
+		<li>Sell and deliver quality products</li>
+		<li>Provide exceptional customer service</li>
+		<li>Provide accurate pictures and descriptions of the products you are selling</li>
+		<li>Respond to inquiries quickly</li>
+		<li>Respect the intellectual property rights of others</li>
+		<li>Respect the privacy and publicity rights of others by not posting their personal information or identity on your Leema Store page</li>
+		<li>Be respectful when communicating with buyers</li>
+		<li>Do not use explicit or offensive language</li>
+		<li>Do not sell prohibited items or services</li>
+		<li><strong>The following types of items are prohibited and may not be sold on Leema:</strong>
+			<ul>
+				<li>illegal goods</li>
+				<li>drug paraphernalia</li>
+				<li>gambling-related products, including lottery tickets, casino gaming chips, off-track betting, and wagers at races</li>
+				<li>adult entertainment oriented products</li>
+				<li>firearms, firearm parts or hardware, or ammunition</li>
+				<li>other weapons and other devices designed to cause physical injury</li>
+				<li>live animals</li>
+				<li>cigarettes, tobacco, or vaporizers</li>
+				<li>prescription pharmaceuticals</li>
+				<li>occult materials</li>
+				<li>hate or harmful products</li>
+				<li>prepaid cards, checks, or other financial merchandise</li>
+				<li>money-orders, wire-transfer money orders, or foreign currency</li>
+				<li>prepaid phone cards</li>
+				<li>buyers or membership clubs, including any dues associated with such clubs</li>
+				<li>subscription offers</li>
+				<li>infomercial sales</li>
+			</ul>
+		</li>
+		<li><strong>The following types of services may not be sold on Leema:</strong>
+			<ul>
+				<li>illegal services</li>
+				<li>escort services, or other adult entertainment oriented services</li>
+				<li>bill payment or debt collection services</li>
+				<li>credit counseling, repair, or protection services</li>
+				<li>bankruptcy-related services</li>
+				<li>identity theft services</li>
+				<li>phone services</li>
+			</ul>
+		</li>
+	</ul>
+
+	<p>We reserve the right to suspend or terminate usage of Leema for violations of these guidelines.</p>
+
+	<h3>Leema Buyer Guidelines:</h3>
+	<p>Leema is a community built on hard work, trust, passion, and most importantly, food. To ensure Buyers and Sellers alike have a pleasant experience, we require buyers to abide by the Leema Buyer Guidelines.</p>
+
+	<h3>Leema Requires Buyers:</h3>
+	<ul>
+		<li>Honor their commitment to pay when an item is purchased</li>
+		<li>Communicate with the seller in a respectful manner</li>
+		<li>Do not use explicit or offensive language</li>
+	</ul>
+
+	<h3>Leema Guidelines:</h3>
+	<p>Leema is an online marketplace that allows people to sell the art that is their food to buyers from around the country.</p>
+
+	<p>To ensure that both buyers and sellers have a pleasant experience, Leema requires that all users abide by the Leema Guidelines</p>
+
+	<p>Leema does not allow any prohibited items, services, and/or items that violate intellectual property rights to be listed, advertised, or sold on Leema.</p>
+
+	<p>Leema Stores are Independent Businesses</p>
+
+	<p>Leema Stores have their own policies and shipping and fulfillment methods. Leema Seller’s should be completely honest and forthright when selling products. Leema sellers should offer exceptional customer service and products of the highest quality.</p>
+
+	<p>Leema is a community of people who enjoy creating and eating food. For this reason, we ask that all sellers and store owners be kind and honest and represent themselves accurately.</p>
+
+	<p>If you would like to learn more about buying and selling on Leema, please review our Seller Guidelines and Buyer Guidelines</p>
+
+	<p>In accordance with our Terms of Use, we reserve the right to remove listings and/or users that do not abide by any of Leema’s guidelines.</p>
+
 </div>
