adding content to the faq page

--- a/app/views/faq/index.html.erb
+++ b/app/views/faq/index.html.erb
@@ -1,3 +1,47 @@
 <div class="container">
-	<h1>FAQ's</h1>
+	<h1>Frequently Asked Questions</h1>
+
+	<h3>Seller FAQ's</h3>
+	<hr>
+
+	<h4>What do I need to open a store?</h4>
+	<p>A pulse, delicious homemade food items, and a bank account to transfer all that cash into. That’s it.</p>
+
+	<h4>I have an old shoe; can I sell it on Leema?</h4>
+	<p>No. However if you put that old shoe down and whip up some delicious homemade cookies, you can sell those! From Grandma’s famous oatmeal raisin cookies from California to hand bottled maple syrup from Vermont, if it’s food created with heart, soul, and passion, it can be sold on Leema.</p>
+
+	<h4>Show me the money! But seriously, how do I get my money?</h4>
+	<p>Using Direct Checkout, buyers pay with their debit or credit card and you get your money in your account within 2 business days. It’s really that simple.</p>
+
+	<h4>Someone bought my food, now what?</h4>
+	<p>Pack it up and send it off before you get the temptation to eat it yourself! Depending on the shipping method selected by the buyer, you will need to do one of two things:</p>
+
+	<ul>
+		<!-- <li>Using Postmates, a courier will be to you shortly to pick up the package and deliver it to the hungry buyer</li> -->
+		<li>Using FedEx, UPS, or USPS schedule a pick up or drop your package off at your preferred location</li>
+	</ul>
+
+	<p>Once the item has shipped, make sure to provide the buyer with a tracking number so they can continuously track the location of their delicious package.</p>
+
+
+	<h3>General FAQ's</h3>
+	<hr>
+
+	<h4>What is Leema anyway?</h4>
+	<p>Leema is an online marketplace that allows Culinary Artisans to sell the food products they put their heart and soul into creating to buyers with great taste.</p>
+
+	<h4>What am I doing here?</h4>
+	<p>Buying or selling delicious and unique food items!</p>
+
+	<h4>How does Leema make money?</h4>
+	<p>We make sure that we are successful only when our sellers are successful. We take 10% of all completed sales.</p>
+
+	<h4>What the heck does Leema even mean?</h4>
+	<p>Leema stands for Let Everyone Eat My Art.</p>
+
+	<h4>Who started Leema?</h4>
+	<p>A hipster, a nerd, and a fat kid at heart.</p>
+
+	<h4>How do I join the Leema community?</h4>
+	<p>To join the Leema community of food, create a free account by clicking “Register” on our homepage.</p>
 </div>
