--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -31,8 +31,10 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag current_user.gravatar_url, class: 'gravatar' %><%= current_user.first_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="/<%= current_user.id %>">Profile</a></li>
-              <li><%= link_to "My Store", "/store/admin" %></li>
-              <li><%= link_to "New Product", "/store/admin/products/new" %></li>
+              <% if spree_current_user.supplier? %>
+                <li><%= link_to "My Store", "/store/admin" %></li>
+                <li><%= link_to "New Product", "/store/admin/products/new" %></li>
+              <% end %>
               <li class="divider"></li>
               <li><%= link_to "Edit Profile", edit_path(@user) %></li>
               <li><%= link_to "Log Out", logout_path %></li>
