No more error if there is no product image

--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -27,8 +27,11 @@
 
             <%#-= large_image(product, :itemprop => "image", :class => 'img-responsive center-block') -%>
 
-
-            <div class="product-image background-image" style="background-image: url(<%= image_url product.images.first.attachment.url(:large) %>);"></div>
+            <% if product.images.count > 0 %>
+              <div class="product-image background-image" style="background-image: url(<%= image_url product.images.first.attachment.url(:large) %>);"></div>
+            <% else %>
+              <div class="product-image background-image" style="background-image: url(<%= image_url ("leema-product-placeholder.jpg") %>)"></div>
+            <% end %>
 
             <div class="product-info">
 
