--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,8 +17,11 @@
 			<% @products.first(6).each do |product| %>
 			<div class="col-md-4 col-sm-6 col-xs-12 welcome-product">
 				<%= link_to 'store/products/' + product.id.to_s, :class => 'product-link', :itemprop => "name", :title => product.name do %>
-				<%= image_tag product.images.first.attachment.url(:large), :class => 'img-responsive center-block' %>
-
+					<% if product.images.count > 0 %>
+						<%= image_tag product.images.first.attachment.url(:large), :class => 'img-responsive center-block' %>
+					<% else %>
+						<%= image_tag("leema-product-placeholder.jpg", :class => 'img-responsive center-block') %>
+					<% end %>
 				<div class="seller-info">
 					<h3 class="seller-name"><%= product.name %></h3>
 					<p class="product-descr"><%= truncate(product.description, :length => 200) %></p>
