removed spree_current_user

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -31,7 +31,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag current_user.gravatar_url, class: 'gravatar' %><%= current_user.first_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="/<%= current_user.id %>">Profile</a></li>
-              <% if spree_current_user.supplier? %>
+              <% if current_user.supplier? %>
                 <li><%= link_to "My Store", "/store/admin" %></li>
                 <li><%= link_to "New Product", "/store/admin/products/new" %></li>
               <% end %>
