--- a/app/views/spree/admin/images/_form.html.erb
+++ b/app/views/spree/admin/images/_form.html.erb
@@ -4,11 +4,11 @@
       <%= f.label Spree.t(:filename) %><br>
       <%= f.file_field :attachment %>
     </div>
-    <!-- Deleting the variant name -->
-    <!--<div data-hook="variant" class="field">
+    <!-- Hiding this made the images not work, so using CSS to hide -->
+    <div data-hook="variant" class="field" style="display:none;">
       <%= f.label Spree::Variant.model_name.human %><br>
       <%= f.select :viewable_id, @variants, {}, {:class => 'select2 fullwidth'} %>
-    </div>-->
+    </div>
   </div>
   <div data-hook="alt_text" class="field omega five columns">
     <%= f.label Spree.t(:alt_text) %><br>
