--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -66,7 +66,7 @@
         <% if @user.supplier? %>
           <div class="form-group">
             <%= f.label :store_logo %>
-            <%= f.file_field :logo %>
+            <%= f.file_field :store_logo %>
             <p class="help-block">Recommended size 200px x 200px.</p>
           </div>
         <% end %>
