--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -1,8 +1,10 @@
 <% cache [current_currency, @product] do %>
  <div id="product-brand" class="row">
-    <div class="col-sm-10 col-xs-8">
+    <div class="col-xs-12">
       <a href="/<%= @product.suppliers.first.users.first.id %>">
-        <%= image_tag @product.suppliers.first.users.first.gravatar_url, class: "seller-logo" %>
+        <% if @product.suppliers.first.users.first.store_logo != nil %>
+          <%= image_tag @product.suppliers.first.users.first.store_logo(:default), class: "seller-logo" %>
+        <% end %>
       </a>
         <div class="seller-info">
           <a href= "/<%= @product.suppliers.first.users.first.id %>">
@@ -11,12 +13,12 @@
           <p class="seller-location"><i class="fa fa-map-marker"></i> <%= @product.suppliers.first.users.first.city %>, <%= @product.suppliers.first.users.first.state %></p>
         </div>
     </div>
-    <div class="col-sm-2 col-xs-4">
+    <!-- <div class="col-sm-2 col-xs-4">
         <a href="#" class="btn btn-favorite">
           Favorite
         </a>
-   </div>
-
+   </div> -->
+  </div>
   <div data-hook="product_show" itemscope itemtype="http://schema.org/Product">
     <% @body_id = 'product-details' %>
     <div class="row" id="product-info-page">
