--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -28,7 +28,12 @@
           <li><%= link_to "Browse", root_path %></li>
           <li id="link-to-cart" data-hook><%= link_to_cart %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag current_user.gravatar_url, class: 'gravatar' %><%= current_user.first_name %> <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+              <% if current_user.avatar_file_name? %>
+                <%= image_tag current_user.avatar.url(:mini), class: 'gravatar' %>
+              <% else %>
+                <%= image_tag "leema-nav-logo", class: 'gravatar' %>
+              <% end %><%= current_user.first_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="/<%= current_user.id %>">Profile</a></li>
               <% if current_user.supplier? %>
