--- a/app/views/spree/admin/suppliers/_form.html.erb
+++ b/app/views/spree/admin/suppliers/_form.html.erb
@@ -13,7 +13,7 @@
     <!-- auto populate name and email if user is a new supplier -->
     <% if spree_current_user.supplier? == false %>
       <%= form.field_container :name do %>
-        <%= form.label :name, Spree::Supplier.human_attribute_name(:name) %>:<br />
+        <%= form.label :full_name, Spree::Supplier.human_attribute_name(:full_name) %>:<br />
         <%= form.text_field :name, :class => 'fullwidth title', :value => spree_current_user.full_name %>
       <% end %>
       <%= form.field_container :email do %>
@@ -23,7 +23,7 @@
     <!-- when editing or viewing another supplier dont auto populate name/email -->
     <% else %>
       <%= form.field_container :name do %>
-        <%= form.label :name, Spree::Supplier.human_attribute_name(:name) %>:<br />
+        <%= form.label :full_name, Spree::Supplier.human_attribute_name(:full_name) %>:<br />
         <%= form.text_field :name, :class => 'fullwidth title' %>
       <% end %>
       <%= form.field_container :email do %>
