switching to leema_description

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,7 +24,7 @@
 					<% end %>
 				<div class="seller-info">
 					<h3 class="seller-name"><%= product.name %></h3>
-					<p class="product-descr"><%= truncate(product.description, :length => 200) %></p>
+					<p class="product-descr"><%= truncate(product.leema_description, :length => 200) %></p>
 				</div>
 				<% end %>
 			</div>
