--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -42,7 +42,7 @@
         <p class="text-muted"><i class="fa fa-clock-o"></i> Joined <%= @user.created_at.strftime('%B %Y') %></p>
         <% if @user.supplier? %>
           <p class="text-muted"><%= @supplier.products.count %> Products Listed</p>
-          <a href="#" class="btn btn-favorite"> Favorite</a>
+          <!-- <a href="#" class="btn btn-favorite"> Favorite</a> -->
         <% end %>
       </div>
 
