--- a/app/views/spree/admin/shared/_header.html.erb
+++ b/app/views/spree/admin/shared/_header.html.erb
@@ -23,7 +23,7 @@
               <% if current_user.avatar_file_name? %>
                 <%= image_tag current_user.avatar.url(:mini), class: 'gravatar' %>
               <% else %>
-                <%= image_tag "leema-nav-logo", class: 'gravatar' %>
+                <%= image_tag "leema-nav-logo.jpg", class: 'gravatar' %>
               <% end %><%= current_user.first_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="/<%= current_user.id %>">Profile</a></li>
