adjusting product grid layout

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -377,12 +377,13 @@ textarea {
 
 .product-info {
 	background: #fff;
-	padding: @grid-gutter-width;
+	padding: (@grid-gutter-width * .6666667);
 }
 
 .product-info h3 {
 	margin-top: 0px;
 	min-height: 60px;
+	font-size: 23px;
 }
 
 /* Clear styles for product grid so there are always 3 or 2 products on the same line depending on screen width */
