adding flex slider

--- a/app/views/spree/products/_image.html.erb
+++ b/app/views/spree/products/_image.html.erb
@@ -1,5 +1,19 @@
 <% if @product.images.count > 0 %>
-  <%= image_tag @product.images.first.attachment.url(:large), :itemprop => "image", :class => "img-responsive center-block" %>
+	<% if (@product.images + @product.variant_images).uniq.size > 1 %>
+	  <div class="flexslider">
+		  <ul class="slides">
+		  	<% @product.images.each do |i| %>
+			    <li data-thumb="<%= image_path i.attachment.url(:product) %>">
+			      <%= image_tag(i.attachment.url(:large)) %>
+			    </li>
+		    <% end %>
+		  </ul>
+		</div>
+	<% else %>
+		<%= image_tag @product.images.first.attachment.url(:large), :itemprop => "image", :class => "img-responsive center-block single" %>
+	<% end %>
+
 <% else %>
-  <%= image_tag("leema-product-placeholder.jpg", :class => "img-responsive center-block") %>
+  <%= image_tag("leema-product-placeholder.jpg", :class => "img-responsive center-block single") %>
 <% end %>
+
