fixed if statement for about

--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -110,8 +110,8 @@
               <!-- Tab panes -->
               <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="about">
-                  <% if @user.about? %>
-                    <%= simple_format(@@product.suppliers.first.users.first.about, class: 'lead') %>
+                  <% if @product.suppliers.first.users.first.about != "" %>
+                    <%= simple_format(@product.suppliers.first.users.first.about) %>
                   <% else %>
                     <p>This seller has no info.</p>
                   <% end %>
