switching to a higher quality image

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -32,7 +32,7 @@
         <% elsif @user.store_logo_file_name? %>
           <%= image_tag @user.store_logo, class: 'img-thumbnail img-responsive' %>
         <% else %>
-          <%= image_tag "leema-seller-logo.jpg", class: 'img-thumbnail img-responsive' %>
+          <%= image_tag "leema-logo-alt.png", class: 'img-thumbnail img-responsive' %>
         <% end %>
         </div>
         <h3><%= @user.full_name %></h3>
