--- a/app/assets/stylesheets/profiles/profiles.css.scss
+++ b/app/assets/stylesheets/profiles/profiles.css.scss
@@ -54,8 +54,8 @@
 		}
 
 		.img-thumbnail {
-			background-color: #3a89ff;
-			padding: 2px;
+			background-color: #fff;
+			border: 2px solid #3a89ff;
 		}
 }
 
