--- a/app/views/spree/admin/products/index.html.erb
+++ b/app/views/spree/admin/products/index.html.erb
@@ -2,6 +2,12 @@
   <%= Spree.t(:listing_products) %>
 <% end %>
 
+<% content_for :page_actions do %>
+  <li id="new_product_link">
+    <%= button_link_to Spree.t(:new_product), new_object_url, {:icon => 'plus', :id => 'admin_new_product' } %>
+  </li>
+<% end if can?(:create, Spree::Product) %>
+
 <%= render :partial => 'spree/admin/shared/product_sub_menu' %>
 
 <% content_for :table_filter_title do %>
