--- a/app/views/spree/admin/orders/index.html.erb
+++ b/app/views/spree/admin/orders/index.html.erb
@@ -120,22 +120,46 @@
       </tr>
     </thead>
     <tbody>
-    <% @orders.each do |order| %>
-      <tr data-hook="admin_orders_index_rows" class="state-<%= order.state.downcase %> <%= cycle('odd', 'even') %>">
-        <td class="align-center"><%= l (@show_only_completed ? order.completed_at : order.created_at).to_date %></td>
-        <td class="align-center"><%= link_to order.number, edit_admin_order_path(order) %></td>
-        <td class="align-center"><span class="state <%= order.considered_risky ? 'considered_risky' : 'considered_safe' %>"></span></td>
-        <td class="align-center"><span class="state <%= order.state.downcase %>"><%= Spree.t("order_state.#{order.state.downcase}") %></span></td>
-        <td class="align-center"><span class="state <%= order.payment_state %>"><%= link_to Spree.t("payment_states.#{order.payment_state}"), admin_order_payments_path(order) if order.payment_state %></span></td>
-          <% if Spree::Order.checkout_step_names.include?(:delivery) %>
-            <td class="align-center"><span class="state <%= order.shipment_state %>"><%= Spree.t("shipment_states.#{order.shipment_state}") if order.shipment_state %></span></td>
-          <% end %>
-        <td><%= mail_to order.email %></td>
-        <td class="align-center"><%= order.display_total.to_html %></td>
-        <td class='actions align-center' data-hook="admin_orders_index_row_actions">
-          <%= link_to_edit_url edit_admin_order_path(order), :title => "admin_edit_#{dom_id(order)}", :no_text => true %>
-        </td>
-      </tr>
+    <!-- For Leema Admin, show all orders -->
+    <% if @user.leema_admin? == true %>
+      <% @orders.each do |order| %>
+        <tr data-hook="admin_orders_index_rows" class="state-<%= order.state.downcase %> <%= cycle('odd', 'even') %>">
+          <td class="align-center"><%= l (@show_only_completed ? order.completed_at : order.created_at).to_date %></td>
+          <td class="align-center"><%= link_to order.number, edit_admin_order_path(order) %></td>
+          <td class="align-center"><span class="state <%= order.considered_risky ? 'considered_risky' : 'considered_safe' %>"></span></td>
+          <td class="align-center"><span class="state <%= order.state.downcase %>"><%= Spree.t("order_state.#{order.state.downcase}") %></span></td>
+          <td class="align-center"><span class="state <%= order.payment_state %>"><%= link_to Spree.t("payment_states.#{order.payment_state}"), admin_order_payments_path(order) if order.payment_state %></span></td>
+            <% if Spree::Order.checkout_step_names.include?(:delivery) %>
+              <td class="align-center"><span class="state <%= order.shipment_state %>"><%= Spree.t("shipment_states.#{order.shipment_state}") if order.shipment_state %></span></td>
+            <% end %>
+          <td><%= mail_to order.email %></td>
+          <td class="align-center"><%= order.display_total.to_html %></td>
+          <td class='actions align-center' data-hook="admin_orders_index_row_actions">
+            <%= link_to_edit_url edit_admin_order_path(order), :title => "admin_edit_#{dom_id(order)}", :no_text => true %>
+          </td>
+        </tr>
+      <% end %>
+    <!-- For suppliers, only show their orders.-->
+    <% else %>
+      <% @user.supplier.products.each do |product| %>
+        <% product.orders.each do |order| %>
+          <tr data-hook="admin_orders_index_rows" class="state-<%= order.state.downcase %> <%= cycle('odd', 'even') %>">
+            <td class="align-center"><%= l (@show_only_completed ? order.completed_at : order.created_at).to_date %></td>
+            <td class="align-center"><%= link_to order.number, edit_admin_order_path(order) %></td>
+            <td class="align-center"><span class="state <%= order.considered_risky ? 'considered_risky' : 'considered_safe' %>"></span></td>
+            <td class="align-center"><span class="state <%= order.state.downcase %>"><%= Spree.t("order_state.#{order.state.downcase}") %></span></td>
+            <td class="align-center"><span class="state <%= order.payment_state %>"><%= link_to Spree.t("payment_states.#{order.payment_state}"), admin_order_payments_path(order) if order.payment_state %></span></td>
+              <% if Spree::Order.checkout_step_names.include?(:delivery) %>
+                <td class="align-center"><span class="state <%= order.shipment_state %>"><%= Spree.t("shipment_states.#{order.shipment_state}") if order.shipment_state %></span></td>
+              <% end %>
+            <td><%= mail_to order.email %></td>
+            <td class="align-center"><%= order.display_total.to_html %></td>
+            <td class='actions align-center' data-hook="admin_orders_index_row_actions">
+              <%= link_to_edit_url edit_admin_order_path(order), :title => "admin_edit_#{dom_id(order)}", :no_text => true %>
+            </td>
+          </tr>
+        <% end %>
+      <% end %>
     <% end %>
     </tbody>
   </table>
