Scoped products backend to supplier.

--- a/app/views/spree/admin/products/index.html.erb
+++ b/app/views/spree/admin/products/index.html.erb
@@ -13,10 +13,6 @@
 <% content_for :table_filter_title do %>
   <%= Spree.t(:search) %>
 <% end %>
-<!--TODO set up products scoped to the supplier -->
-<!--<%= @user.supplier.products.each do |product| %>
-  <%= product.name %>
-<% end %>-->
 
 <% content_for :table_filter do %>
   <div data-hook="admin_products_sidebar">
@@ -79,19 +75,37 @@
       </tr>
     </thead>
     <tbody>
+    <!-- Show all products for Leema Admins -->
+    <% if spree_current_user.leema_admin? == true %>
       <% @collection.each do |product| %>
-          <tr <%== "style='color: red;'" if product.deleted? %> id="<%= spree_dom_id product %>" data-hook="admin_products_index_rows" class="<%= cycle('odd', 'even') %>">
-            <td class="align-center"><%= product.sku rescue '' %></td>
-            <td class="align-center"></td>
-            <td><%= link_to product.try(:name), edit_admin_product_path(product) %></td>
-            <td class="align-center"><%= product.display_price.to_html rescue '' %></td>
-            <td class="actions" data-hook="admin_products_index_row_actions">
-              <%= link_to_edit product, :no_text => true, :class => 'edit' if can?(:edit, product) && !product.deleted? %>
-              &nbsp;
-              <%= link_to_delete product, :no_text => true if can?(:delete, product) && !product.deleted? %>
-            </td>
-          </tr>
+        <tr <%== "style='color: red;'" if product.deleted? %> id="<%= spree_dom_id product %>" data-hook="admin_products_index_rows" class="<%= cycle('odd', 'even') %>">
+          <td class="align-center"><%= product.sku rescue '' %></td>
+          <td class="align-center"></td>
+          <td><%= link_to product.try(:name), edit_admin_product_path(product) %></td>
+          <td class="align-center"><%= product.display_price.to_html rescue '' %></td>
+          <td class="actions" data-hook="admin_products_index_row_actions">
+            <%= link_to_edit product, :no_text => true, :class => 'edit' if can?(:edit, product) && !product.deleted? %>
+            &nbsp;
+            <%= link_to_delete product, :no_text => true if can?(:delete, product) && !product.deleted? %>
+          </td>
+        </tr>
       <% end %>
+    <% else %>
+      <!-- Show only the supplier products for non Leema Admins -->
+      <% @user.supplier.products.each do |product| %>
+        <tr <%== "style='color: red;'" if product.deleted? %> id="<%= spree_dom_id product %>" data-hook="admin_products_index_rows" class="<%= cycle('odd', 'even') %>">
+          <td class="align-center"><%= product.sku rescue '' %></td>
+          <td class="align-center"></td>
+          <td><%= link_to product.try(:name), edit_admin_product_path(product) %></td>
+          <td class="align-center"><%= product.display_price.to_html rescue '' %></td>
+          <td class="actions" data-hook="admin_products_index_row_actions">
+            <%= link_to_edit product, :no_text => true, :class => 'edit' if can?(:edit, product) && !product.deleted? %>
+            &nbsp;
+            <%= link_to_delete product, :no_text => true if can?(:delete, product) && !product.deleted? %>
+          </td>
+        </tr>
+      <% end %>
+    <% end %>
     </tbody>
   </table>
 <% else %>
