removing shop by before taxonomy name

--- a/app/views/spree/shared/_taxonomies.html.erb
+++ b/app/views/spree/shared/_taxonomies.html.erb
@@ -2,7 +2,7 @@
 <nav id="taxonomies" class="sidebar-item" data-hook>
   <% @taxonomies.each do |taxonomy| %>
     <% cache [I18n.locale, taxonomy, max_level] do %>
-      <h4><%= Spree.t(:shop_by_taxonomy, :taxonomy => taxonomy.name) %></h4>
+      <h5><%= Spree.t(taxonomy.name) %></h5>
       <%= taxons_tree(taxonomy.root, @taxon, max_level) %>
     <% end %>
   <% end %>
