--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -5,7 +5,7 @@
         <% if @product.suppliers.first.users.first.store_logo != nil %>
           <%= image_tag @product.suppliers.first.users.first.store_logo(:default), class: "seller-logo" %>
         <% else %>
-          <%= image_tag "leema-seller-logo.jpg", class: "seller-logo" %>
+          <%= image_tag("leema-seller-logo.jpg", :class => "seller-logo") %>
         <% end %>
       </a>
         <div class="seller-info">
