--- a/app/views/spree/admin/shared/_product_tabs.html.erb
+++ b/app/views/spree/admin/shared/_product_tabs.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :sidebar_title do %>
-  <span class="sku"><%= @product.sku %></span>
+  <span class="name"><%= @product.name %></span>
 <% end %>
 
 <% content_for :sidebar do %>
@@ -12,7 +12,7 @@
       <%= content_tag :li, :class => ('active' if current == 'Product Details') do %>
         <%= link_to_with_icon 'edit', Spree.t(:product_details), edit_admin_product_url(@product) %>
         <% end %>
-      
+
       <%= content_tag :li, :class => ('active' if current == 'Images') do %>
         <%= link_to_with_icon 'picture-o', Spree.t(:images), admin_product_images_url(@product) %>
         <% end %>
@@ -22,11 +22,11 @@
         <%= content_tag :li, :class => ('active' if current == 'Variants') do %>
           <%= link_to_with_icon 'th-large', Spree.t(:variants),  admin_product_variants_url(@product) %>
           <% end %>
-        
+
         <%= content_tag :li, :class => ('active' if current == 'Product Properties') do %>
           <%= link_to_with_icon 'tasks', Spree.t(:product_properties), admin_product_product_properties_url(@product) %>
           <% end %>
-        
+
         <%= content_tag :li, :class => ('active' if current == 'Stock Management') do %>
           <%= link_to_with_icon 'tasks', Spree.t(:stock_management), stock_admin_product_url(@product) %>
           <% end %>
