--- a/app/views/spree/admin/products/stock.html.erb
+++ b/app/views/spree/admin/products/stock.html.erb
@@ -58,6 +58,29 @@
                 <th class="actions"></th>
               </thead>
               <tbody>
+              <% if spree_current_user.leema_admin? == true %>
+                <% variant.stock_items.each do |item| %>             
+                  <% next unless @stock_locations.include?(item.stock_location) %>
+                  <tr id="stock-item-<%= item.id %>" class="<%= cycle('odd', 'even', :name => 'stock_locations')%>">
+                    <td class="align-center"><%= item.stock_location.name %></td>
+                    <td class="align-center"><%= item.count_on_hand %></td>
+                    <td class="align-center">
+                      <%= form_tag admin_stock_item_path(item), method: :put, class: 'toggle_stock_item_backorderable' do %>
+                        <%= check_box_tag 'stock_item[backorderable]', true,
+                              item.backorderable?,
+                              class: 'stock_item_backorderable',
+                              id: "stock_item_backorderable_#{item.stock_location.id}" %>
+                      <% end %>
+                    </td>
+                    <td class="actions">
+                      <%= link_to(icon('delete'), [:admin, item],
+                            method: :delete, remote: true,
+                            class: 'icon_link with-tip fa fa-trash no-text',
+                            title: Spree.t(:remove), data: { action: :remove, confirm: Spree.t(:are_you_sure) }) %>
+                    </td>
+                  </tr>
+                <% end %>
+              <% else %>
                 <% variant.stock_items.each do |item| %>
                   <% if item.stock_location.name == "#{spree_current_user.supplier.name}" %>
                     <% next unless @stock_locations.include?(item.stock_location) %>
@@ -82,6 +105,7 @@
                     </tr>
                   <% end %>
                 <% end %>
+              <% end %>
               </tbody>
             </table>
           </td>
