--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -2,7 +2,7 @@
  <div id="product-brand" class="row">
     <div class="col-xs-12">
       <a href="/<%= @product.suppliers.first.users.first.id %>">
-        <% if @product.suppliers.first.users.first.store_logo != nil %>
+        <% if @product.suppliers.first.users.first.store_logo_file_name? %>
           <%= image_tag @product.suppliers.first.users.first.store_logo(:default), class: "seller-logo" %>
         <% else %>
           <%= image_tag("leema-seller-logo.jpg", :class => "seller-logo") %>
