moving image to public

--- a/app/views/spree/drop_ship_order_mailer/supplier_order.html.erb
+++ b/app/views/spree/drop_ship_order_mailer/supplier_order.html.erb
@@ -6,7 +6,11 @@
           <tbody>
             <tr>
               <td valign="top">
-                <figure id="logo" data-hook><%= link_to image_tag('leema-mail-logo.png'), spree.root_url %></figure>
+                <figure id="logo" data-hook>
+                  <%= link_to spree.root_url do %>
+                    <img src="/assets/leema-mail-logo.png">
+                  <% end %>
+                </figure>
               </td>
             </tr>
             <tr>
