adding username field

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,6 +19,16 @@
               <div><%= f.label :last_name %>
               <%= f.text_field :last_name, class: 'form-control input_wide' %></div>
             </div>
+
+            <!-- username -->
+            <div class="form-group">
+              <%= f.label :first_name %>
+              <div class="input-group">
+                <span class="input-group-addon" id="basic-addon1">www.leema.co/</span>
+                <%= f.text_field :first_name, class: 'form-control input_wide' %>
+              </div>
+            </div>
+
             <div class="form-group">
               <div><%= f.label :email %>
               <%= f.email_field :email, class: 'form-control input_wide' %></div>
