renaming store_name

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,10 +22,10 @@
 
             <!-- username -->
             <div class="form-group">
-              <%= f.label :first_name %>
+              <%= f.label :store_name %>
               <div class="input-group">
                 <span class="input-group-addon" id="basic-addon1">www.leema.co/</span>
-                <%= f.text_field :first_name, class: 'form-control input_wide' %>
+                <%= f.text_field :store_name, class: 'form-control input_wide' %>
               </div>
             </div>
 
