changing sign up to register

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
           <%= devise_error_messages! %>
           <fieldset>
             <legend>
-              <h2>Sign Up</h2>
+              <h2>Register</h2>
             </legend>
             <div class="form-group">
               <div><%= f.label :first_name %>
@@ -42,7 +42,7 @@
                 <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control input_wide' %></div>
             </div>
           </fieldset>
-          <div><%= f.submit "Sign up", :class => "btn btn-primary" %></div>
+          <div><%= f.submit "Register", :class => "btn btn-primary" %></div>
 
           <div class="text-right">
             Already a member? <%= render "devise/shared/links" %>
