--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
               <label for"user_store_name">User Name</label>
               <div class="input-group">
                 <span class="input-group-addon" id="basic-addon1">www.leema.co/</span>
-                <%= f.text_field :store_name, class: 'form-control input_wide' %>
+                <%= f.text_field :username, class: 'form-control input_wide' %>
               </div>
             </div>
 
