--- a/app/views/spree/admin/shared/_tabs.html.erb
+++ b/app/views/spree/admin/shared/_tabs.html.erb
@@ -1,12 +1,13 @@
-<% if can? :admin, Spree::Order %>
-  <%= tab :orders, :payments, :creditcard_payments, :shipments, :credit_cards, :return_authorizations, :icon => 'shopping-cart' %>
-<% end %>
-<% if can? :admin, Spree::Product %>
-  <%= tab :products, :option_types, :properties, :prototypes, :variants, :product_properties, :taxonomies, :icon => 'th-large' %>
-<% end %>
+<% if spree_current_user.supplier? %>
+  <% if can? :admin, Spree::Order %>
+    <%= tab :orders, :payments, :creditcard_payments, :shipments, :credit_cards, :return_authorizations, :icon => 'shopping-cart' %>
+  <% end %>
+  <% if can? :admin, Spree::Product %>
+    <%= tab :products, :option_types, :properties, :prototypes, :variants, :product_properties, :taxonomies, :icon => 'th-large' %>
+  <% end %>
 
-<%= tab(:promotions, :url => spree.admin_promotions_path, :icon => 'bullhorn') %>
-
+  <%= tab(:promotions, :url => spree.admin_promotions_path, :icon => 'bullhorn') %>
+<% end %>
 <!-- Begin Leema Admin only nav bar -->
 <% if spree_current_user.leema_admin? == true %> 
   <%= tab :reports, :icon => 'file'  %>
