adding simple format to product description

--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -54,7 +54,7 @@
           <div id="product-description" data-hook="product_description">
 
             <div itemprop="description" data-hook="description">
-              <%= @product.leema_description %>
+              <%= simple_format(@product.leema_description ) %>
             </div>
 
             <div id="cart-form" data-hook="cart_form">
