--- a/app/views/spree/shared/_review.html.erb
+++ b/app/views/spree/shared/_review.html.erb
@@ -16,7 +16,7 @@
         <h6 class="review-author" itemprop="author"><a href="/<%= review.user.id %>"><%= review.user.full_name%></a></h6>
       <% end %>
 
-      <span class="review-date"><%= Spree.t(:Posted) %> <%= time_ago_in_words(l review.created_at) %> ago</span>
+      <span class="review-date"><%= Spree.t(:Posted) %> <%= time_ago_in_words(review.created_at) %> ago</span>
       <meta itemprop="datePublished" content="<%= review.created_at.to_date.to_s %>" />
     </div><!-- close .reviewer-info -->
 
